--- a/style.css
+++ b/style.css
@@ -1,58 +1,65 @@
 body {
-    background-color: #FFF5E4;
-    color:black;
-    font-family: 'Montserrat', sans-serif;
-    font-size 16px;
-    font-weight: 300px;
-    line-height: 1.6em;
+  background-color: #ffeec9;
+  font-family: 'Lato', sans-serif;
+  font-size: 16px; /* Sets the font size to 16px */
+  font-weight: 300; /* Sets the font weight to 300 */
+  line-height: 1.6; /* Sets the line-height to 1.6 * the font-size */
+  color: #4a4a4a;
 }
- h1 {
-    font-size: 2.75em;
-    font-weight: 700;
- }
- h2 {
-    font-size: 2.25em;
-    font-weight: 700;
- }
- h3 {
-    font-size: 1.75em;
-    font-weight: 400;
- }
- h4 {
-    font-size: 1.35em;
-    font-weight: 400;
- }
- img{ width:100%}
- a {
-    color: #FF9494;
-    text-decoration: none; 
-  }
-  a:visited { 
-    color: #ff7f50;
-  }
-  a:hover,
-  a:focus {
-    color: #025464;
-    text-decoration: underline; 
-  }
-  a:focus {
-    color: #E8AA42;
-    text-decoration: underline;
-  }
-  a:active { 
-    color: #994c30;
-  }
-/* 
-colors used:
-primary color: offwhite, #FFF5E4, rgb(255, 245, 228) 
-secondary color: pale pink, #FFE3E1, rgb(255, 227, 225)
-tertiary colors: darker pink and dark salmon, 
-#FFD1D1, rgb(255, 209, 209)
-#FF9494, rgb(255, 148, 148)
-*/
+
+h1, h2, h3, h4 {
+  line-height: 1.4;
+}
+
+h1 {
+  font-size: 2.75em;
+  font-weight: 700;
+}
+
+h2 {
+  font-size: 2.25em;
+  font-weight: 700;
+}
+
+h3 {
+  font-size: 1.75em;
+  font-weight: 400;
+}
+
+h4 {
+  font-size: 1.35em;
+  font-weight: 400;
+}
+
+img {
+  width: 100%;
+}
+
+a:hover,
+a:focus {
+  color: #cc6540;
+  text-decoration: underline;
+}
+
+.button {
+  display: inline-block; /* since the <a> tag is inline by default, we need to change this to inline-block, but more on this in the next exercise */
+  background-color: #ff7f50;
+  color: #ffeec9; /* needed to override the default link color */
+  font-weight: 400;
+  padding: 10px;
+  border-radius: 3px;
+  border-bottom: 2px solid #994c30; /* width of the border, type, color */
+  transition: 0.2s opacity;
+}
+
+.button:hover {
+  opacity: 0.8; /* Reduces the opacity of the button to 80% */
+  text-decoration: none;
+}
+
 .button.contact {
-    background-color: transparent;
-    color: #FF9494;
-    text-transform: uppercase;
-    border: 2px solid #FF9494;
-  }
+  background-color: transparent;
+  color: #ff7f50;
+  text-transform: uppercase;
+  border: 2px solid #ff7f50;
+}
