--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ a:focus {
   color: #ffeec9;
   /* needed to override the default link color */
   font-weight: 400;
-  padding: 10px;
+  padding: 10px; 
   border-radius: 3px;
   border-bottom: 2px solid #F2BED1;
   /* width of the border, type, color */
@@ -118,6 +118,8 @@ a:focus {
 
 .container {
   padding: 0 15px;
-  max-width: 1200px;
-  margin: 0 auto;
+ 
+}
+.row {
+  margin: 25px 0; /* 25px top and bottom, 0 left and right */
 }
