--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,8 @@ header {
   margin: 0 auto;
   padding: 10px 5px 15px 5px;
   border-bottom: 3px solid #FDCEDF;
+  text-align: center;
+  padding: 10px 0; 
 }
 
 * {
@@ -120,6 +122,42 @@ a:focus {
   padding: 0 15px;
  
 }
+
 .row {
   margin: 25px 0; /* 25px top and bottom, 0 left and right */
+}
+
+#work .row { 
+  padding-bottom: 25px; border-bottom: 1px solid #4a4a4a; 
+}
+
+#hero h1 {
+  text-align: center; /*centers text */
+}
+
+.logo {
+  max-width: 250px;
+}
+
+nav {
+  ul {
+    lists-style-type: none;
+    padding: 0;
+  }
+  li {
+    display: inline-block;
+  }
+  a {
+    padding: 0 15px;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: #4a4a4a;
+  }
+}
+
+#hero {
+  background-color: #ffc5e6
+  padding: 20px 0;
+  display: inline-block;
+  width: 100%;
 }
