--- a/css/style.css
+++ b/css/style.css
@@ -7,11 +7,11 @@ Primary Color, secondary, etc, all shades of pink;
 #F2BED1
 */
 header {
-  background-color:plum;
+  background-color: #2E5256;
   padding: 10px;
   margin: 0 auto;
   padding: 10px 5px 15px 5px;
-  border-bottom: 3px solid #FDCEDF;
+  border-bottom: 3px solid #FFFFFF;
   text-align: center;
   padding: 10px 0; 
 }
@@ -21,7 +21,7 @@ header {
 }
 
 body {
-  background-color: #F9F5F6;
+  background-color: #FFFFFF;
   font-family: 'Jost', sans-serif;
   font-size: 16px;
   /* Sets the font size to 16px */
@@ -29,7 +29,7 @@ body {
   /* Sets the font weight to 300 */
   line-height: 1.6;
   /* Sets the line-height to 1.6 * the font-size */
-  color: #331720;
+  color: #2E5256;
 }
 
 h1,
@@ -65,20 +65,20 @@ img {
 
 a:hover,
 a:focus {
-  color: #cc6540;
+  color: #B3BA72;
   text-decoration: underline;
 }
 
 .button {
   display: inline-block;
   /* since the <a> tag is inline by default, we need to change this to inline-block, but more on this in the next exercise */
-  background-color: #F2BED1;
-  color: #ffeec9;
+  background-color: #E8D7DB;
+  color: #2E5256;
   /* needed to override the default link color */
   font-weight: 400;
   padding: 10px;
   border-radius: 3px;
-  border-bottom: 2px solid #F2BED1;
+  border-bottom: 2px solid #E8D7DB;
   /* width of the border, type, color */
   transition: 0.2s opacity;
 }
@@ -91,21 +91,21 @@ a:focus {
 
 .button.contact {
   background-color: transparent;
-  color: #FDCEDF;
+  color: #2E5256;
   text-transform: uppercase;
-  border: 2px solid #FDCEDF;
+  border: 2px solid #E8D7DB;
 }
 
 .learnmore {
   display: inline-block;
   /* since the <a> tag is inline by default, we need to change this to inline-block, but more on this in the next exercise */
-  background-color: #F2BED1;
-  color: #ffeec9;
+  background-color: #E8D7DB;
+  color: #2E5256;
   /* needed to override the default link color */
   font-weight: 400;
   padding: 10px; 
   border-radius: 3px;
-  border-bottom: 2px solid #F2BED1;
+  border-bottom: 2px solid #2E5256;
   /* width of the border, type, color */
   transition: 0.2s opacity;
 
@@ -128,7 +128,7 @@ a:focus {
 }
 
 #work .row { 
-  padding-bottom: 25px; border-bottom: 1px solid #4a4a4a; 
+  padding-bottom: 25px; border-bottom: 1px solid #2E5256; 
   
 }
 
@@ -151,19 +151,19 @@ nav a {
     padding: 0 15px;
     text-transform: uppercase;
     font-weight: 700;
-    color: #4a4a4a;
+    color: #2E5256;
   }
 
 
 #hero {
-  background-color: #ffc5e6;
+  background-color: #FFFFFF;
   padding: 20px 0;
   display: inline-block;
   width: 100%;
 }
 
 #contact {   /*footer*/
-  background-color: plum;
+  background-color: #2E5256;
   padding: 20px 0;
   display: inline-block;
   width: 100%;
