fixed color on logo

--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ nav a {
     padding: 0 15px;
     text-transform: uppercase;
     font-weight: 700;
-    color: #2E5256;
+    color: #FFFFFF;
   }
 
 
