--- a/css/style.css
+++ b/css/style.css
@@ -222,6 +222,9 @@ Medium devices (640px and larger)
     padding: 20px 0 13px;
   }
 
+  #home-body .row .col-lg-5 p {
+    margin-top: 0;
+  }
   nav {
     width: auto;
     float: right;
