--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ h4 {
 
 img {
   width: 100%;
-  max-width: 100%;
+  max-width: 150px;
   height: auto;
 }
 
@@ -260,6 +260,12 @@ Medium devices (640px and larger)
 
   #about-body h3 {
     margin-top: 0;
+  }
+  nav > ul > li {
+    display: inline-block;
+  }
+  .navtoggle li:not(:last-child) {
+    display: none;
   }
 }
 
