--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,53 @@ header {
   text-align: center;
   padding: 10px 0;
 }
+nav > ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
 
+nav > ul > li > a {
+  padding: 0 15px;
+  text-transform: uppercase;
+  font-weight: 600;
+  color: #1b4d3e;
+}
+
+.navtoggle,
+.navtoggle.responsive {
+  position: relative;
+}
+
+.navtoggle li .icon {
+  position: absolute;
+  right: 0;
+  top: 0;
+  font-size: 20px;
+  padding-right: 0;
+}
+
+.navtoggle li:not(:last-child) {
+  display: none;
+}
+
+.navtoggle.responsive li {
+  display: block;
+}
+
+.navtoggle.responsive nav {
+  padding: 24px 0 0;
+}
+
+.navtoggle.responsive li {
+  display: block;
+  padding: 10px 0;
+  border-top: 1px solid #1b4d3e;
+}
+
+.navtoggle.responsive li:last-child {
+  padding: 0 0 10px;
+}
 * {
   box-sizing: border-box;
 }
@@ -181,9 +227,6 @@ a.contact {
 a.skills {
   color: #FFFFFF;
 }
-.navtoggle li:not(:last-child) {
-  display: none;
-}
 
 
 /* ==============================
@@ -238,7 +281,6 @@ Medium devices (640px and larger)
   nav {
     width: auto;
     float: right;
-    margin-top: 4px;
   }
 
   h1 {
@@ -266,12 +308,32 @@ Medium devices (640px and larger)
   #about-body h3 {
     margin-top: 0;
   }
+  .navtoggle.responsive nav {
+    padding: 0;
+  }
+
+  .navtoggle.responsive li {
+    padding: 0;
+    margin: 0;
+    border-top: 0;
+  }
+
+  nav > ul {
+    margin: 0;
+    border-top: 0;
+  }
+
   nav > ul > li {
     display: inline-block;
   }
+
   .navtoggle li:not(:last-child) {
     display: inline-block;
-  }  
+  }
+
+  .navtoggle li:last-child {
+    display: none;
+  }
 }
 
 /* ==============================
