--- a/css/style.css
+++ b/css/style.css
@@ -6,14 +6,17 @@ Primary Color, secondary, etc, all shades of pink;
 #FDCEDF
 #F2BED1
 */
+main {
+  padding-top: 45px;
+}
 header {
   background-color: #DCD6D8;
   padding: 10px;
-  margin: 0 auto;
-  padding: 10px 5px 15px 5px;
-  border-bottom: 3px solid #DCD6D8;
-  text-align: center;
-  padding: 10px 0;
+  box-shadow: 0 5px 5px -1px #f0faf7;
+  -webkit-box-shadow: 0 5px 5px -1px #f0faf7;
+  -moz-box-shadow: 0 5px 5px -1px #f0faf7;
+  position: fixed;
+  width: 100%;
 }
 nav > ul {
   list-style-type: none;
@@ -82,16 +85,16 @@ h1,
 h2,
 h3,
 h4 {
-  line-height: 1.4;
+  line-height: 2;
 }
 
 h1 {
-  font-size: 2.75em;
+  font-size: 2.50em;
   font-weight: 700;
 }
 
 h2 {
-  font-size: 2.25em;
+  font-size: 2.00em;
   font-weight: 700;
 }
 
@@ -308,6 +311,11 @@ Medium devices (640px and larger)
   #about-body h3 {
     margin-top: 0;
   }
+
+  .logo {
+    min-width: 250px;
+  }
+
   .navtoggle.responsive nav {
     padding: 0;
   }
