--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@ a:focus {
 }
 
 .logo {
-  max-width: 250px;
+  max-width: 150px;
 }
 
 nav ul {
@@ -359,7 +359,10 @@ Large devices (1024px or larger)
     margin-top: 4px;
   }
 
-  main {}
+  main {
+    padding-top: 170px;
+    width: 100%;
+  }
 
   body {
     font-size: 24px;
