--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ Primary Color, secondary, etc, all shades of pink;
 main {
   padding-top: 45px;
 }
+
 header {
   background-color: #dcd6d8;
   padding: 10px;
@@ -18,6 +19,7 @@ header {
   position: fixed;
   width: 100%;
 }
+
 nav > ul {
   list-style-type: none;
   padding: 0;
@@ -65,12 +67,13 @@ nav > ul > li > a {
 .navtoggle.responsive li:last-child {
   padding: 0 0 10px;
 }
+
 * {
   box-sizing: border-box;
 }
 
 body {
-  background-color: #FFFFFF;
+  background-color: #fff;
   font-family: 'Jost', sans-serif;
   font-size: 16px;
   /* Sets the font size to 16px */
@@ -89,12 +92,12 @@ h4 {
 }
 
 h1 {
-  font-size: 2.50em;
+  font-size: 2.5em;
   font-weight: 700;
 }
 
 h2 {
-  font-size: 2.00em;
+  font-size: 2em;
   font-weight: 700;
 }
 
