--- a/css/style.css
+++ b/css/style.css
@@ -230,6 +230,10 @@ nav a {
   text-align: center;
 }
 
+#contact-main {
+  padding: 100px 100px 100px 100px;
+}
+
 #contact-header {
   padding: 20px 20px 20px 20px; 
 }
